--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.0",
-        "softspring/subscription": "dev-1.0"
+        "softspring/subscription": "*"
     },
     "autoload": {
         "psr-4": {
