--- a/Resources/config/services/services.yaml
+++ b/Resources/config/services/services.yaml
@@ -15,3 +15,4 @@ services:
 
     Softspring\SubscriptionBundle\Manager\PlanManager: ~
     Softspring\SubscriptionBundle\Manager\ProductManager: ~
+    Softspring\SubscriptionBundle\Manager\SubscriptionManager: ~
