--- a/Resources/config/services/services.yaml
+++ b/Resources/config/services/services.yaml
@@ -5,6 +5,7 @@ services:
         public: false
         bind:
             $em: '@sfs_subscription.entity_manager'
+            $api: '@Softspring\SubscriptionBundle\Manager\ApiManagerInterface'
 
     Softspring\SubscriptionBundle\Controller\:
         resource: '../../../Controller/*'
@@ -13,15 +14,20 @@ services:
     Softspring\SubscriptionBundle\Form\:
         resource: '../../../Form/*'
 
-    Softspring\SubscriptionBundle\Manager\PlanManager: ~
-    Softspring\SubscriptionBundle\Manager\ProductManager: ~
-    Softspring\SubscriptionBundle\Manager\SubscriptionManager: ~
+    Softspring\SubscriptionBundle\Manager\ApiManager:
+        arguments:
+            $name: '%sfs_subscription.adapter.name%'
+    Softspring\SubscriptionBundle\Manager\ApiManagerInterface:
+        alias: 'Softspring\SubscriptionBundle\Manager\ApiManager'
 
+    Softspring\SubscriptionBundle\Manager\PlanManager: ~
     Softspring\SubscriptionBundle\Manager\PlanManagerInterface:
         alias: 'Softspring\SubscriptionBundle\Manager\PlanManager'
 
+    Softspring\SubscriptionBundle\Manager\ProductManager: ~
     Softspring\SubscriptionBundle\Manager\ProductManagerInterface:
         alias: 'Softspring\SubscriptionBundle\Manager\ProductManager'
 
+    Softspring\SubscriptionBundle\Manager\SubscriptionManager: ~
     Softspring\SubscriptionBundle\Manager\SubscriptionManagerInterface:
         alias: 'Softspring\SubscriptionBundle\Manager\SubscriptionManager'
