--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,11 @@
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
+    },
+    "conflict": {
+        "stripe/stripe-php": "<6.40.0"
+    },
+    "suggest": {
+        "stripe/stripe-php": "Add Stripe php client library if you want to set stripe as driver"
     }
 }
