Show stripe subscription details

--- a/Resources/config/routing/admin_subscriptions.yaml
+++ b/Resources/config/routing/admin_subscriptions.yaml
@@ -1,3 +1,7 @@
 sfs_subscription_admin_subscriptions_list:
     controller: sfs_subscription.admin.subscription.controller::list
     path: /
+
+sfs_subscription_admin_subscriptions_read:
+    controller: sfs_subscription.admin.subscription.controller::read
+    path: /{entity}
