--- a/Resources/config/services/controller/subscribe.yaml
+++ b/Resources/config/services/controller/subscribe.yaml
@@ -7,5 +7,5 @@ services:
             $planManager: '@Softspring\SubscriptionBundle\Manager\PlanManagerInterface'
             $eventDispatcher: '@event_dispatcher'
             $em: '@sfs_subscription.entity_manager'
-            $clientAdapter: '@Softspring\SubscriptionBundle\Adapter\CustomerAdapterInterface'
+            $clientAdapter: '@Softspring\CustomerBundle\Adapter\CustomerAdapterInterface'
 
