--- a/Resources/config/services/controller/admin_plans.yaml
+++ b/Resources/config/services/controller/admin_plans.yaml
@@ -9,13 +9,12 @@ services:
         alias: 'Softspring\SubscriptionBundle\Form\Admin\PlanUpdateForm'
 
     sfs_subscription.admin.plan.controller:
-        class: Softspring\AdminBundle\Controller\EntityController
+        class: Softspring\CrudlBundle\Controller\CrudlController
         public: true
         calls:
             - { method: setContainer, arguments: ['@service_container'] }
         arguments:
             $manager: '@Softspring\SubscriptionBundle\Manager\PlanManagerInterface'
-            $eventDispatcher: '@event_dispatcher'
             $listFilterForm: '@Softspring\SubscriptionBundle\Form\Admin\PlanListFilterFormInterface'
             $createForm: '@Softspring\SubscriptionBundle\Form\Admin\PlanCreateFormInterface'
             $updateForm: '@Softspring\SubscriptionBundle\Form\Admin\PlanUpdateFormInterface'
