--- a/Resources/config/services/controller/admin_subscriptions.yaml
+++ b/Resources/config/services/controller/admin_subscriptions.yaml
@@ -3,13 +3,12 @@ services:
         alias: 'Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterForm'
 
     sfs_subscription.admin.subscription.controller:
-        class: Softspring\AdminBundle\Controller\EntityController
+        class: Softspring\CrudlBundle\Controller\CrudlController
         public: true
         calls:
             - { method: setContainer, arguments: ['@service_container'] }
         arguments:
             $manager: '@Softspring\SubscriptionBundle\Manager\SubscriptionManagerInterface'
-            $eventDispatcher: '@event_dispatcher'
             $listFilterForm: '@Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterFormInterface'
             $createForm: null
             $updateForm: null
