--- a/Resources/config/services/controller/admin_subscriptions.yaml
+++ b/Resources/config/services/controller/admin_subscriptions.yaml
@@ -26,12 +26,14 @@ services:
             $config:
                 entity_attribute: 'subscription'
                 list:
+                    is_granted: 'ROLE_SUBSCRIPTION_ADMIN_SUBSCRIPTION_LIST'
                     filter_event_name: !php/const Softspring\SubscriptionBundle\SfsSubscriptionEvents::ADMIN_SUBSCRIPTIONS_LIST_FILTER
                     view_event_name: !php/const Softspring\SubscriptionBundle\SfsSubscriptionEvents::ADMIN_SUBSCRIPTIONS_LIST_VIEW
                     view: '@@SfsSubscription/admin/subscription/list.html.twig'
                     view_page: '@@SfsSubscription/admin/subscription/list-page.html.twig'
                     read_route: 'sfs_subscription_admin_subscriptions_read'
                 read:
+                    is_granted: 'ROLE_SUBSCRIPTION_ADMIN_SUBSCRIPTION_DETAILS'
                     param_converter_key: 'id'
                     view_event_name: !php/const Softspring\SubscriptionBundle\SfsSubscriptionEvents::ADMIN_SUBSCRIPTIONS_READ_VIEW
                     view: '@@SfsSubscription/admin/subscription/read.html.twig'
