--- a/Resources/config/services/controller/admin_subscriptions.yaml
+++ b/Resources/config/services/controller/admin_subscriptions.yaml
@@ -4,13 +4,12 @@ services:
         autoconfigure: true
         public: false
 
-    Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterFormInterface:
-        alias: 'Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterForm'
-
     Softspring\SubscriptionBundle\Controller\Admin\SubscriptionController:
         public: true
-        calls:
-            - { method: setContainer, arguments: ['@service_container'] }
+        tags: ['controller.service_arguments']
+
+    Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterFormInterface:
+        alias: 'Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterForm'
 
     sfs_subscription.admin.subscription.controller:
         class: Softspring\CrudlBundle\Controller\CrudlController
