Add sync plans and products commands

--- a/Resources/config/services/manager/plan.yaml
+++ b/Resources/config/services/manager/plan.yaml
@@ -9,3 +9,6 @@ services:
 
     Softspring\SubscriptionBundle\Manager\PlanManagerInterface:
         class: Softspring\SubscriptionBundle\Manager\PlanManager
+
+    Softspring\SubscriptionBundle\Command\SyncAllPlansCommand:
+        tags: ['console.command']
